--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,6 +210,15 @@ td {
     cursor: pointer;
     padding-left: 5px;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+    transition: top .06s ease, box-shadow .06s ease; /* anim fluide */
+}
+
+/* équivalent de :active pour iOS */
+.arcade__btn.is-active {
+    box-shadow: none;
+    top: .7em;
 }
 
 .sound{
